# factorysolutions

./: .env  README.md  deployment.gpu.template.json  deployment.template.json  docker-compose.yml  eflow_gpu_setup.md  simulator.md
config/: deployment.amd64.json  deployment.gpu.amd64.json
docker/grafana/: Dockerfile  dashboard.json  dashboard.yml  datasource.yml  defect_dashboard_linux.json  defect_dashboard_windows.json  safety_dashboard_linux.json  safety_dashboard_windows.json
docker/influxdb/: Dockerfile
docker/mosquitto/: Dockerfile
docker/mosquitto/conf/: mosquitto.conf
docker/opcua/: Dockerfile
docker/opcua/src/: server.py
docker/openvino/: Dockerfile
docker/openvino/application/: impeller_eflow_pipeline.sh
docker/simplertsp/: Dockerfile
docker/telegraf/: Dockerfile
docker/telegraf/src/: telegraf.conf
iot_central/: app.json
modules/grafana/: Dockerfile.grafana  defect_dashboard_windows.json  module.json  safety_dashboard_linux.json  safety_dashboard_windows.json
modules/industrial-safety/: Dockerfile.openvino  module.json
modules/industrial-safety/application/: debug.sh  (+1 more)
modules/influxdb/: module.json
modules/mosquitto/: module.json
modules/opcua/: module.json
modules/simplertsp/: module.json
modules/telegraf/: Dockerfile.telegraf  module.json
simulator_config/: configure.py  defaults.ini  defect_dashboard_windows.json  influx_datasource.json  influx_datasource.yml  safety_dashboard_windows.json  setup_grafana.bat  telegraf.conf  testdata_datasource.json
training-notebook/: impeller_trainer.ipynb  pyproject.toml
(+20 files in other folders)
